# todo-timeline

./: .clang-format  .clang-tidy  .commitlintrc.yml  .editorconfig  .gitignore  .prettierrc  .qmllint.ini  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DELIVERY_REPORT.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TODO.md  build.bat  build.sh  capture_ui.py  resources.qrc  run.bat  run.sh  start.bat  start.sh  test.bat  test.sh
.github/: CODEOWNERS  branch-protection.md  commit-convention.md  dependabot.yml  dependency-review-config.yml  labeler.yml  labels.yml  project.yml  release.yml  renovate.json  settings.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-assign.yml  build.yml  codeql.yml  commit-lint.yml  dependency-review.yml  greetings.yml  labeler.yml  lock-threads.yml  milestone.yml  project.yml  release-please.yml  release.yml  scorecard.yml  size-label.yml  stale.yml  todo.yml  welcome.yml
android/: AndroidManifest.xml
artifacts/linux/: TodoApp
artifacts/linux-latest/: TodoApp
qml/: AcrylicPanel.qml  AppConstants.js  CategoryDialog.qml  ColorCircle.qml  ColorCircleSmall.qml  DeleteConfirmDialog.qml  Main.qml  Notification.qml  PriorityButton.qml  TaskCreator.qml  TaskEditor.qml  TaskItem.qml  TaskList.qml  ThemeSettingsDialog.qml  Timeline.qml
src/: logger.cpp  logger.h  main.cpp  taskmanager.cpp  taskmanager.h  thememanager.cpp  thememanager.h  timelinemodel.cpp  timelinemodel.h
(+2 files in other folders)
